--- a/src/tpl.html
+++ b/src/tpl.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>webpack</title>
+    <title>网页模板</title>
   </head>
   <body>
-    <div>
-      <p>奥特曼</p>
-    </div>
-    <script src="dist/index.js"></script>
-    <script src="dist/app.js"></script>
+    <div>怪兽</div>
   </body>
 </html>
